feat: set up development tools and professional code standards
- Configure ESLint with strict rules for React, TypeScript, and accessibility
- Set up Prettier with consistent formatting rules
- Configure Jest and React Testing Library for comprehensive testing
- Set up pre-commit hooks with husky and lint-staged
- Configure conventional commits for consistent commit messages
- Set up GitHub Actions workflow for CI/CD with automated testing
- Create comprehensive .gitignore for React/Node.js/Vite projects
- Add security audit tools and professional development practices

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,34 @@ yarn-error.log
 
 # TypeScript
 *.tsbuildinfo
+
+# Jest
+jest-coverage/
+.nyc_output/
+
+# ESLint cache
+.eslintcache
+
+# Prettier cache
+.prettiercache
+
+# Husky
+.husky/_
+
+# Storybook
+storybook-static/
+
+# Bundle analyzer
+bundle-analyzer-report.html
+
+# Lighthouse CI
+.lighthouseci/
+
+# Cypress
+cypress/videos/
+cypress/screenshots/
+
+# Playwright
+test-results/
+playwright-report/
+playwright/.cache/
