--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "highcharts": "^12.4.0",
+    "highcharts-react-official": "^3.2.2",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -36,6 +38,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/highcharts": "^5.0.44",
     "@types/jest": "^30.0.0",
     "@types/jest-axe": "^3.5.9",
     "@types/react": "^19.1.10",
