--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -33,5 +33,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src", "__mocks__"]
 }
