--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "build:analyze": "vite build --mode analyze",
     "size-report": "npm run build && du -sh dist/* | sort -hr",
     "size-check": "node scripts/bundle-size-check.js",
-    "build:check": "npm run build && npm run size-check"
+    "build:check": "npm run build && npm run size-check",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
@@ -44,6 +48,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@playwright/test": "^1.55.0",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
