--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,3 @@
-# Polygon.io API Configuration
-# Get your free API key at: https://polygon.io/
-# Free tier allows 5 API calls per minute
-VITE_POLYGON_API_KEY=your_polygon_api_key_here
-
-# Development Configuration
-NODE_ENV=development
+# Polygon.io API Key
+# Get your free API key at https://polygon.io/
+VITE_POLYGON_API_KEY=your_api_key_here
