--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,8 +63,10 @@ jobs:
           node-version: '20.x'
           cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Clear npm cache and reinstall
+        run: |
+          rm -rf node_modules package-lock.json
+          npm install
 
       - name: Build application
         run: npm run build
