--- a/package.json
+++ b/package.json
@@ -86,9 +86,10 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2",
-    "vitest": "^3.2.4",
-    "@rollup/rollup-linux-x64-gnu": "^4.28.1",
-    "@rollup/rollup-linux-x64-musl": "^4.28.1"
+    "vitest": "^3.2.4"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
